syntax = "proto3";

option java_multiple_files = true;
package com.hungerstation.zendesk_ticket.grpc.services;
option java_outer_classname = "ZendeskTicketProtos";
import "google/protobuf/timestamp.proto";


message Id {
    int64 id = 1;
}


message ZendeskTicket {
    string related_to_type = 1;
    int64 related_to_id = 2;
    string zendesk_reference_id = 3;
    google.protobuf.Timestamp created_at = 4;

}

service ZendeskTicketService {
    rpc create (ZendeskTicket) returns (ZendeskTicket);
    rpc fetch (Id) returns (ZendeskTicket);
    rpc update (ZendeskTicket) returns (ZendeskTicket);
}